<resources>
    <string name="app_name">SerbisyoNowv1</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="birthdate">Birthday</string>
    <string name="sex_hint">Sex</string>
    <string name="register">Register</string>
    <string name="last_name">Last Name</string>
    <string-array name="sex_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="close">CLose</string>
    <string name="open">Open</string>


</resources>