<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registeract"
    android:background="#FBFBFB"
    >



    <ScrollView
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:overScrollMode="ifContentScrolls"
        android:scrollbars="vertical"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_2"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/backbtn"
                android:layout_width="42dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"

                android:src="@drawable/ic_back"
                android:background="@android:color/transparent"/>

            <TextView
                android:id="@+id/text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_1"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppinsbold"
                android:text="Register Account"
                android:textColor="@color/black"

                android:textSize="30dp" />

            <TextView
                android:id="@+id/text_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_1"
                android:text="Fill your details or continue \nwith social media"

                android:textSize="18dp" />



            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fname"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/white"
                android:hint="@string/first_name"
                android:paddingLeft="20dp"

                />





            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lname"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/white"

                android:hint="@string/last_name"
                android:paddingLeft="20dp" />



            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_reg"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/white"
                android:hint="@string/email_address"
                android:paddingLeft="20dp" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:passwordToggleEnabled="true"
                app:boxBackgroundMode="none">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_reg"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="Create Pasword"
                android:inputType="textPassword"
                android:paddingLeft="20dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="Phone Number"
                android:inputType="phone"
                android:paddingLeft="20dp"
                />



            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="Address"
                android:inputType="textPostalAddress"
                android:paddingLeft="20dp" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/birthdate"
                    android:layout_width="150dp"
                    android:layout_height="54dp"
                    android:paddingEnd="15dp"
                    android:background="@drawable/button_shape"
                    android:backgroundTint="@color/white"
                    android:cursorVisible="false"
                    android:drawableEnd="@drawable/ic_calendar"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="Birthday"
                    android:inputType="date"
                    android:paddingLeft="20dp"
                    android:layout_marginTop="15dp"/>

                <Spinner
                    android:id="@+id/spinnerSex"
                    android:layout_width="150dp"
                    android:layout_height="54dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_shape"
                    android:backgroundTint="@color/white"

                    android:prompt="@string/sex_hint" />


            </LinearLayout>


            <Button
                android:id="@+id/registerbtn"
                android:layout_width="278dp"
                android:layout_height="60dp"
                android:layout_below="@id/layout"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="50dp"

                android:background="@drawable/button_shape"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/continue_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="- or continue with -"
                android:layout_below="@id/registerbtn"
                android:layout_marginLeft="120dp"
                android:textSize="15dp"
                android:layout_marginTop="25dp"
                android:layout_centerHorizontal="true"
                />

            <ImageButton
                android:id="@+id/google"
                android:layout_width="82dp"
                android:layout_height="70dp"
                android:layout_below="@id/continue_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:src="@drawable/google"
                android:scaleType="centerInside"
                android:layout_marginLeft="135dp"/>



            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/google"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">


                <TextView
                    android:id="@+id/text_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"

                    android:layout_marginLeft="60dp"
                    android:text="Already have an account?"
                    android:textSize="15dp"
                    android:fontFamily="@font/poppinsregular"/>

                <TextView
                    android:id="@+id/text_create_reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"

                    android:text="Login"
                    android:textSize="15dp"
                    android:fontFamily="@font/poppinsbold"
                    android:layout_marginBottom="40dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>