<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="#FBFBFB">

    <ProgressBar
        android:id="@+id/signinProgbar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:theme="@style/MyProgressbar"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SerbisyoNow \nfor"
        android:textSize="35dp"
        android:fontFamily="@font/poppinsbold"
        android:textColor="@color/black"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-180dp"
        android:layout_marginTop="80dp"
        android:layout_toRightOf="@id/title"
        android:fontFamily="@font/poppinsbold"
        android:text="REQUESTOR"
        android:textColor="@color/green"
        android:textSize="35dp" />
    <TextView
        android:id="@+id/text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fill your details or continue \nwith social media"
        android:layout_below="@id/title"
        android:layout_marginLeft="25dp"
        android:textSize="20dp"
        />

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/text_2"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:id="@+id/layout">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_add"

                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:hint="@string/email_address"
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="5dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/white"
                android:paddingLeft="10dp"
                android:layout_marginTop="15dp"
                />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/passlayout1"
            app:passwordToggleEnabled="true"
            app:boxBackgroundMode="none">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:hint="@string/password"

                android:drawableStart="@drawable/lock_icon"
                android:background="@drawable/button_shape"
                android:drawablePadding="5dp"
                android:paddingLeft="10dp"
                android:backgroundTint="@color/white"
                android:layout_marginTop="15dp"

                android:ems="10"
                android:inputType="textPassword"

                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/forgot_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="forgot password"
            android:layout_below="@id/password_login"
            android:layout_marginLeft="200dp"
            android:textSize="15dp"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"

            />

    </LinearLayout>

    <Button
        android:id="@+id/loginbutton"
        android:textColor="@color/white"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@id/layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:textSize="18sp"
        android:backgroundTint="@color/maroon"
        android:background="@drawable/button_shape"
        />

    <TextView
        android:id="@+id/continue_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="- or continue with -"
        android:layout_below="@id/loginbutton"
        android:layout_marginLeft="25dp"
        android:textSize="20dp"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        />

    <ImageButton
        android:id="@+id/google_login"
        android:layout_width="82dp"
        android:layout_height="70dp"
        android:layout_below="@id/continue_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:src="@drawable/google"
        android:scaleType="centerInside"
        android:layout_marginLeft="135dp"/>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/google_login"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">


        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="new user?"
            android:textSize="15dp"
            android:fontFamily="@font/poppinsregular"/>

        <TextView
            android:id="@+id/text_create_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:text="Create an Account"
            android:textSize="15dp"
            android:fontFamily="@font/poppinsbold"/>

    </LinearLayout>


</RelativeLayout>